@@ -42,7 +42,7 @@ function Write-IisVerbose
 
     if( $VirtualPath )
     {
-        $Name = Join-IisVirtualPath -Path $SiteName -ChildPath $VirtualPath
+        $SiteName = Join-IisVirtualPath -Path $SiteName -ChildPath $VirtualPath
     }
 
     Write-Verbose -Message ('[IIS Website] [{0}] {1,-34} {2} -> {3}' -f $SiteName,$Name,$OldValue,$NewValue) -Verbose
